Se agregaron estilos a la pagina de productos

--- a/productos.html
+++ b/productos.html
@@ -40,99 +40,149 @@
 <section>
   <article class="product">
     <div class="photo-container">
-    <img src="C:\Users\matias\Desktop\grupo5\img\angular.jpg" alt="curso1">
+      <img src="img\PHP.jpg" alt="curso1">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>PHP y MySQL</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
     <a class="more" href="#">ver más</a>
   </article>
   <article class="product">
     <div class="photo-container">
-    <img src="C:\Users\matias\Desktop\grupo5\img\bootstrap4.jpg" alt="">
+    <img src="img\bootstrap4.jpg" alt="">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>Bootstrap 4</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
     <a class="more" href="#">ver más</a>
   </article>
   <article class="product">
     <div class="photo-container">
-  <img src="C:\Users\matias\Desktop\grupo5\img\c_mas_mas.jpg" alt="">
+  <img src="img\c_mas_mas.jpg" alt="">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>C++</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
     <a class="more" href="#">ver más</a>
   </article>
   <article class="product">
     <div class="photo-container">
-<img src="C:\Users\matias\Desktop\grupo5\img\desarrollador web desde cero.jpg" alt="">
+<img src="img\desarrollador web desde cero.jpg" alt="">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>Desarrollo WEB</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
     <a class="more" href="#">ver más</a>
   </article>
   <article class="product">
     <div class="photo-container">
-      <img src="C:\Users\matias\Desktop\grupo5\img\desarrollo web completo.jpg" alt="">
+      <img src="img\desarrollo web completo.jpg" alt="">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>Desarrollador WEB</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
     <a class="more" href="#">ver más</a>
   </article>
   <article class="product">
     <div class="photo-container">
-      <img src="C:\Users\matias\Desktop\grupo5\img\diseño web desde cero.jpg" alt="">
+      <img src="img\diseño web desde cero.jpg" alt="">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>Diseño WEB desde cero</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
     <a class="more" href="#">ver más</a>
   </article>
   <article class="product">
     <div class="photo-container">
-      <img src="C:\Users\matias\Desktop\grupo5\img\diseño web profesional.jpg" alt="">
+      <img src="img\diseño web profesional.jpg" alt="">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>Diseño WEB profesional</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
     <a class="more" href="#">ver más</a>
   </article>
   <article class="product">
     <div class="photo-container">
-      <img src="C:\Users\matias\Desktop\grupo5\img\diseñoweb.jpg" alt="">
+      <img src="img\diseñoweb.jpg" alt="">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>Diseño WEB</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
     <a class="more" href="#">ver más</a>
   </article>
   <article class="product">
     <div class="photo-container">
-      <img src="C:\Users\matias\Desktop\grupo5\img\ecommerce.jpg" alt="">
+      <img src="img\ecommerce.jpg" alt="">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>Ecommerce</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
     <a class="more" href="#">ver más</a>
   </article>
   <article class="product">
     <div class="photo-container">
-      <img src="C:\Users\matias\Desktop\grupo5\img\efectos css3.jpg" alt="">
+      <img src="img\efectos css3.jpg" alt="">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>Efectos CSS3</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
     <a class="more" href="#">ver más</a>
   </article>
   <article class="product">
     <div class="photo-container">
-      <img src="C:\Users\matias\Desktop\grupo5\img\fundamentos de javascript.jpg" alt="">
+      <img src="img\fundamentos de javascript.jpg" alt="">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>Fundamentos de JavaScript</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
     <a class="more" href="#">ver más</a>
   </article>
   <article class="product">
     <div class="photo-container">
-      <img src="C:\Users\matias\Desktop\grupo5\img\java.jpg" alt="">
+      <img src="img\java.jpg" alt="">
     </div>
-    <h2>Lorem ipsum amet</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    <div class="titulo">
+      <h2>Java</h2>
+    </div>
+    <div class="descripcion">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+    </div>
+
     <a class="more" href="#">ver más</a>
+    
   </article>
 </section>
 <footer>
