Se corrigio altura de animacion en estilos de productos

--- a/productos.html
+++ b/productos.html
@@ -37,6 +37,7 @@
 
             </div>
         </div>
+    </div>
 <section>
   <article class="product">
     <div class="photo-container">
@@ -182,7 +183,7 @@
     </div>
 
     <a class="more" href="#">ver más</a>
-    
+
   </article>
 </section>
 <footer>
