--- a/productos.html
+++ b/productos.html
@@ -12,208 +12,211 @@
     <title>Grupo 5</title>
   </head>
   <body>
-  <div class="container-fluid">
-    <header>
+    <div class="container-fluid">
+      <header>
         <div class="nav">
-            <nav id="principal">
-                <img src="img/logo4.png" alt="logo" id="logoChico">
-                <h2>DH - Grupo 5</h2>
+          <nav id="principal">
+            <img src="img/logo4.png" alt="logo" id="logoChico">
+            <h2>DH - Grupo 5</h2>
 
-                <ul>
-                    <li><a href="home.html">HOME</a></li>
-                    <li><a href="registro.html">REGISTRO</a></li>
-                    <li><a href="login.html">INGRESO</a></li>
-                    <li><a href="perfil.html">PERFIL</a></li>
-                    <li><a href="contacto.html">CONTACTO</a></li>
-                    <li id="faq"><a href="faq.html">FAQ  </a></li>
-                </ul>
-            </nav>
+            <ul>
+                <li><a href="home.html">HOME</a></li>
+                <li><a href="registro.html">REGISTRO</a></li>
+                <li><a href="login.html">INGRESO</a></li>
+                <li><a href="perfil.html">PERFIL</a></li>
+                <li><a href="contacto.html">CONTACTO</a></li>
+                <li id="faq"><a href="faq.html">FAQ  </a></li>
+            </ul>
+          </nav>
         </div>
-    </header>
-    <div class="contenedor">
-        <div class="animation">
+      </header>
+      <main>
+        <div class="contenedor">
+          <div class="animation">
             <div id="particles-js">
 
 
             </div>
+          </div>
         </div>
-    </div>
-<section>
-  <article class="product">
-    <div class="photo-container">
-      <img src="img\PHP.jpg" alt="curso1">
-    </div>
-    <div class="titulo">
-      <h2>PHP y MySQL</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
-    <a class="more" href="#">ver más</a>
-  </article>
-  <article class="product">
-    <div class="photo-container">
-    <img src="img\bootstrap4.jpg" alt="">
-    </div>
-    <div class="titulo">
-      <h2>Bootstrap 4</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
-    <a class="more" href="#">ver más</a>
-  </article>
-  <article class="product">
-    <div class="photo-container">
-  <img src="img\c_mas_mas.jpg" alt="">
-    </div>
-    <div class="titulo">
-      <h2>C++</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
-    <a class="more" href="#">ver más</a>
-  </article>
-  <article class="product">
-    <div class="photo-container">
-<img src="img\desarrollador web desde cero.jpg" alt="">
-    </div>
-    <div class="titulo">
-      <h2>Desarrollo WEB</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
-    <a class="more" href="#">ver más</a>
-  </article>
-  <article class="product">
-    <div class="photo-container">
-      <img src="img\desarrollo web completo.jpg" alt="">
-    </div>
-    <div class="titulo">
-      <h2>Desarrollador WEB</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
-    <a class="more" href="#">ver más</a>
-  </article>
-  <article class="product">
-    <div class="photo-container">
-      <img src="img\diseño web desde cero.jpg" alt="">
-    </div>
-    <div class="titulo">
-      <h2>Diseño WEB desde cero</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
-    <a class="more" href="#">ver más</a>
-  </article>
-  <article class="product">
-    <div class="photo-container">
-      <img src="img\diseño web profesional.jpg" alt="">
-    </div>
-    <div class="titulo">
-      <h2>Diseño WEB profesional</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
-    <a class="more" href="#">ver más</a>
-  </article>
-  <article class="product">
-    <div class="photo-container">
-      <img src="img\diseñoweb.jpg" alt="">
-    </div>
-    <div class="titulo">
-      <h2>Diseño WEB</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
-    <a class="more" href="#">ver más</a>
-  </article>
-  <article class="product">
-    <div class="photo-container">
-      <img src="img\ecommerce.jpg" alt="">
-    </div>
-    <div class="titulo">
-      <h2>Ecommerce</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
-    <a class="more" href="#">ver más</a>
-  </article>
-  <article class="product">
-    <div class="photo-container">
-      <img src="img\efectos css3.jpg" alt="">
-    </div>
-    <div class="titulo">
-      <h2>Efectos CSS3</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
-    <a class="more" href="#">ver más</a>
-  </article>
-  <article class="product">
-    <div class="photo-container">
-      <img src="img\fundamentos de javascript.jpg" alt="">
-    </div>
-    <div class="titulo">
-      <h2>Fundamentos de JavaScript</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
-    <a class="more" href="#">ver más</a>
-  </article>
-  <article class="product">
-    <div class="photo-container">
-      <img src="img\java.jpg" alt="">
-    </div>
-    <div class="titulo">
-      <h2>Java</h2>
-    </div>
-    <div class="descripcion">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
-    </div>
+      </main>
+      <section>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\PHP.jpg" alt="curso1">
+          </div>
+          <div class="titulo">
+            <h2>PHP y MySQL</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\bootstrap4.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Bootstrap 4</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+        <img src="img\c_mas_mas.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>C++</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+          <img src="img\desarrollador web desde cero.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Desarrollo WEB</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\desarrollo web completo.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Desarrollador WEB</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\diseño web desde cero.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Diseño WEB desde cero</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\diseño web profesional.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Diseño WEB profesional</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis  sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\diseñoweb.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Diseño WEB</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\ecommerce.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Ecommerce</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\efectos css3.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Efectos CSS3</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\fundamentos de javascript.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Fundamentos de JavaScript</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\java.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Java</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
 
-    <a class="more" href="#">ver más</a>
+          <a class="more" href="#">ver más</a>
 
-  </article>
-</section>
-<footer>
-  <did id="redesSociales">
+        </article>
+      </section>
+      <footer>
+        <div id="redesSociales">
 
 
           <ul id="icono">
 
-               <li><a href="https://www.facebook.com" target="blank"><i class="fab   fa-facebook-square"></i></a></li>
-               <li><a href="https://www.twitter.com" target="blank"><i class="fab fa-twitter"></i></a></li>
-               <li><a href="https://www.spotify.com" target="blank"><i class="fab fa-spotify"></i></a></li>
-               <li><a href="https://www.apple.com" target="blank"><i class="fab fa-apple"></i></a></li>
-               <li><a href="https://www.amazon.com" target="blank"><i class="fab fa-amazon"></i></a></li>
-               <li><a href="https://www.instagram.com" target="blank"><i class="fab  fa-instagram"></i></a></li>
+            <li><a href="https://www.facebook.com" target="blank"><i class="fab   fa-facebook-square"></i></a></li>
+            <li><a href="https://www.twitter.com" target="blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://www.spotify.com" target="blank"><i class="fab fa-spotify"></i></a></li>
+            <li><a href="https://www.apple.com" target="blank"><i class="fab fa-apple"></i></a></li>
+            <li><a href="https://www.amazon.com" target="blank"><i class="fab fa-amazon"></i></a></li>
+            <li><a href="https://www.instagram.com" target="blank"><i class="fab  fa-instagram"></i></a></li>
 
-           </ul>
-           <small>&copy; Copyright your Website 2019</small>
+          </ul>
 
-
-      </div>
+          <small>&copy; Copyright your Website 2019</small>
 
 
-</footer>
-</div>
-<script src="js/particles.js"></script>
-<script src="js/app.js"></script>
+        </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/1b52e0f26e.js"></script>
+
+      </footer>
+    </div>    <!--container fluid -->
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1b52e0f26e.js"></script>
   </body>
 </html>
