Se cargo la pagina de detalle de producto falta el responsive

--- a/productos.html
+++ b/productos.html
@@ -67,7 +67,7 @@
           <div class="descripcion">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
           </div>
-          <a class="more" href="#">ver más</a>
+          <a class="more" href="curso1.html">ver más</a>
         </article>
         <article class="product">
           <div class="photo-container">
