Retoques finales Primer Spring

--- a/contacto.html
+++ b/contacto.html
@@ -59,7 +59,7 @@
             <div class="mainperfil">
             <h1 class="titulo">Contacto</h1>
             <hr class="lineahorizontal">
-            <form action="#" method="POST">
+            <form action="contacto.html" method="POST">
               <div class="form-group row">
                 <label for="email" class="col-sm-2 col-form-label">Email:</label>
                 <div class="col-sm-10">
