--- a/login.html
+++ b/login.html
@@ -56,7 +56,7 @@
             <div class="mainperfil">
             <h1 class="titulo">Ingreso</h1>
             <hr class="lineahorizontal">
-            <form action="#" method="POST">
+            <form action="Login.html" method="POST">
               <div class="form-group row">
                 <label for="Nombre" class="col-sm-4 col-form-label">Usuario:</label>
                 <div class="col-sm-8">
