--- a/registro.html
+++ b/registro.html
@@ -22,12 +22,12 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">MENU</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="home.html">HOME</a>
+                        <a class="dropdown-item" href="Home.html">HOME</a>
                         <a class="dropdown-item" href="registro.html">REGISTRO</a>
-                        <a class="dropdown-item" href="ingreso.html">INGRESO</a>
+                        <a class="dropdown-item" href="Login.html">INGRESO</a>
                         <a class="dropdown-item" href="contacto.html">CONTACTO</a>
                         <a class="dropdown-item" href="perfil.html">PERFIL</a>
-                        <a class="dropdown-item" href="faq.html">FAQ</a>
+                        <a class="dropdown-item" href="FAQ.html">FAQ</a>
                         
                     </div>
                 </li>
@@ -58,7 +58,7 @@
             <div class="mainperfil">
             <h1 class="titulo">Registro</h1>
             <hr class="lineahorizontal">
-            <form action="#" method="POST">
+            <form action="registro.html" method="POST">
               <div class="form-group row">
                 <label for="Apellido" class="col-sm-4 col-form-label">Apellido:</label>
                 <div class="col-sm-8">
