--- a/productos.html
+++ b/productos.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="home.html">HOME</a></li>
                 <li><a href="registro.html">REGISTRO</a></li>
-                <li><a href="login.html">INGRESO</a></li>
+                <li><a href="Login.html">INGRESO</a></li>
                 <li><a href="perfil.html">PERFIL</a></li>
                 <li><a href="contacto.html">CONTACTO</a></li>
                 <li id="faq"><a href="faq.html">FAQ  </a></li>
@@ -36,7 +36,7 @@
               <div class="dropdown-menu">
                   <a class="dropdown-item" href="home.html">HOME</a>
                   <a class="dropdown-item" href="registro.html">REGISTRO</a>
-                  <a class="dropdown-item" href="ingreso.html">INGRESO</a>
+                  <a class="dropdown-item" href="Login.html">INGRESO</a>
                   <a class="dropdown-item" href="contacto.html">CONTACTO</a>
                   <a class="dropdown-item" href="perfil.html">PERFIL</a>
                   <a class="dropdown-item" href="faq.html">FAQ</a>
