--- a/registro.html
+++ b/registro.html
@@ -41,7 +41,7 @@
                     <ul>
                         <li><a href="home.html">HOME</a></li>
                         <li><a href="registro.html">REGISTRO</a></li>
-                        <li><a href="login.html">INGRESO</a></li>
+                        <li><a href="Login.html">INGRESO</a></li>
                         <li><a href="perfil.html">PERFIL</a></li>
                         <li><a href="contacto.html">CONTACTO</a></li>
                         <li id="faq"><a href="faq.html">FAQ  </a></li>
