Corrección de enlaces

--- a/curso1.html
+++ b/curso1.html
@@ -21,7 +21,7 @@
                       <div class="dropdown-menu">
                           <a class="dropdown-item" href="home.html">HOME</a>
                           <a class="dropdown-item" href="registro.html">REGISTRO</a>
-                          <a class="dropdown-item" href="ingreso.html">INGRESO</a>
+                          <a class="dropdown-item" href="login.html">INGRESO</a>
                           <a class="dropdown-item" href="contacto.html">CONTACTO</a>
                           <a class="dropdown-item" href="perfil.html">PERFIL</a>
                           <a class="dropdown-item" href="faq.html">FAQ</a>
