--- a/perfil.html
+++ b/perfil.html
@@ -23,7 +23,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="home.html">HOME</a>
                                 <a class="dropdown-item" href="registro.html">REGISTRO</a>
-                                <a class="dropdown-item" href="Login.html">INGRESO</a>
+                                <a class="dropdown-item" href="login.html">INGRESO</a>
                                 <a class="dropdown-item" href="contacto.html">CONTACTO</a>
                                 <a class="dropdown-item" href="perfil.html">PERFIL</a>
                                 <a class="dropdown-item" href="faq.html">FAQ</a>
@@ -40,7 +40,7 @@
                             <ul>
                                 <li><a href="home.html">HOME</a></li>
                                 <li><a href="registro.html">REGISTRO</a></li>
-                                <li><a href="Login.html">INGRESO</a></li>
+                                <li><a href="login.html">INGRESO</a></li>
                                 <li><a href="perfil.html">PERFIL</a></li>
                                 <li><a href="contacto.html">CONTACTO</a></li>
                                 <li id="faq"><a href="faq.html">FAQ  </a></li>
