--- a/FAQ.html
+++ b/FAQ.html
@@ -26,7 +26,7 @@
                       <a class="dropdown-item" href="login.html">INGRESO</a>
                       <a class="dropdown-item" href="contacto.html">CONTACTO</a>
                       <a class="dropdown-item" href="perfil.html">PERFIL</a>
-                      <a class="dropdown-item" href="faq.html">FAQ</a>
+                      <!-- <a class="dropdown-item" href="faq.html">FAQ</a> -->
 
                   </div>
               </li>
@@ -42,7 +42,7 @@
                         <li><a href="login.html">INGRESO</a></li>
                         <li><a href="perfil.html">PERFIL</a></li>
                         <li><a href="contacto.html">CONTACTO</a></li>
-                        <li id="faq"><a href="faq.html">FAQ  </a></li>
+                        <!-- <li id="faq"><a href="faq.html">FAQ  </a></li> -->
                     </ul>
                 </nav>
             </div>
