--- a/Home.html
+++ b/Home.html
@@ -20,7 +20,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">MENU</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="home.html">HOME</a>
+                        <!-- <a class="dropdown-item" href="home.html">HOME</a> -->
                         <a class="dropdown-item" href="registro.html">REGISTRO</a>
                         <a class="dropdown-item" href="login.html">INGRESO</a>
                         <a class="dropdown-item" href="contacto.html">CONTACTO</a>
@@ -37,7 +37,7 @@
                     <h2>DH - Grupo 5</h2>
     
                     <ul>
-                        <li><a href="home.html">HOME</a></li>
+                        <!-- <li><a href="home.html">HOME</a></li> -->
                         <li><a href="registro.html">REGISTRO</a></li>
                         <li><a href="login.html">INGRESO</a></li>
                         <li><a href="perfil.html">PERFIL</a></li>
