--- a/perfil.html
+++ b/perfil.html
@@ -25,7 +25,7 @@
                                 <a class="dropdown-item" href="registro.html">REGISTRO</a>
                                 <a class="dropdown-item" href="login.html">INGRESO</a>
                                 <a class="dropdown-item" href="contacto.html">CONTACTO</a>
-                                <a class="dropdown-item" href="perfil.html">PERFIL</a>
+                                <!-- <a class="dropdown-item" href="perfil.html">PERFIL</a> -->
                                 <a class="dropdown-item" href="faq.html">FAQ</a>
                                 
                             </div>
@@ -41,7 +41,7 @@
                                 <li><a href="home.html">HOME</a></li>
                                 <li><a href="registro.html">REGISTRO</a></li>
                                 <li><a href="login.html">INGRESO</a></li>
-                                <li><a href="perfil.html">PERFIL</a></li>
+                                <!-- <li><a href="perfil.html">PERFIL</a></li> -->
                                 <li><a href="contacto.html">CONTACTO</a></li>
                                 <li id="faq"><a href="faq.html">FAQ  </a></li>
                             </ul>
