--- a/registro.html
+++ b/registro.html
@@ -23,7 +23,7 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">MENU</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="Home.html">HOME</a>
-                        <a class="dropdown-item" href="registro.html">REGISTRO</a>
+                        <!-- <a class="dropdown-item" href="registro.html">REGISTRO</a> -->
                         <a class="dropdown-item" href="Login.html">INGRESO</a>
                         <a class="dropdown-item" href="contacto.html">CONTACTO</a>
                         <a class="dropdown-item" href="perfil.html">PERFIL</a>
@@ -40,7 +40,7 @@
     
                     <ul>
                         <li><a href="home.html">HOME</a></li>
-                        <li><a href="registro.html">REGISTRO</a></li>
+                        <!-- <li><a href="registro.html">REGISTRO</a></li> -->
                         <li><a href="Login.html">INGRESO</a></li>
                         <li><a href="perfil.html">PERFIL</a></li>
                         <li><a href="contacto.html">CONTACTO</a></li>
