ajustes de estilos

--- a/contacto.html
+++ b/contacto.html
@@ -57,30 +57,34 @@
             </div>
           
             <div class="mainperfil">
-            <h1 class="titulo">Contacto</h1>
-            <hr class="lineahorizontal">
-            <form action="contacto.html" method="POST">
-              <div class="form-group row">
-                <label for="email" class="col-sm-2 col-form-label">Email:</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="email" name="email">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="comentario" class="col-sm-2 col-form-label">Comentario:</label>
-                <div class="col-sm-10">
-                  <textarea name="comentario" id="" cols="25" rows="10">                    
-                  </textarea>
-                </div>
-              </div>   
-              <div class="form-group row">
-                <label for="comentario" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                  <button type="submit" class="btn btn-warning mb-2 boton-submit">Enviar Comentario</button>
-                </div>
-              </div>   
+              <h1 class="titulo">Contacto</h1>
+              <hr class="lineahorizontal">
+              <form action="contacto.html" method="POST">
 
-            </form>
+                <div>
+                  <label for="email">Email</label>
+                  <div >
+                  <input type="email" id="email" name="email">
+                  </div>
+                </div>
+
+                <div>
+                  <label for="comentario">Comentarios</label>
+                  <div id="textarea">
+                    <textarea name="comentario" id="" cols="43" rows="8">                    
+                    </textarea>
+                  </div>
+                </div> 
+
+                <div>
+                  <label for="comentario"></label>
+                  <div>
+                    <button type="submit" class="btn btn-warning mb-2 boton-submit">Enviar Comentario</button>
+                  </div>
+                </div>   
+
+              </form>
+            </div>
         <footer>
 
         </footer>
