--- a/productos.html
+++ b/productos.html
@@ -204,6 +204,154 @@
 
         </article>
       </section>
+      <section>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\PHP.jpg" alt="curso1">
+          </div>
+          <div class="titulo">
+            <h2>PHP y MySQL</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="curso1.html">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\bootstrap4.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Bootstrap 4</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+        <img src="img\c_mas_mas.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>C++</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+          <img src="img\desarrollador web desde cero.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Desarrollo WEB</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\desarrollo web completo.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Desarrollador WEB</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\diseño web desde cero.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Diseño WEB desde cero</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\diseño web profesional.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Diseño WEB profesional</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis  sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\diseñoweb.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Diseño WEB</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\ecommerce.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Ecommerce</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\efectos css3.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Efectos CSS3</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\fundamentos de javascript.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Fundamentos de JavaScript</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+          <a class="more" href="#">ver más</a>
+        </article>
+        <article class="product">
+          <div class="photo-container">
+            <img src="img\java.jpg" alt="">
+          </div>
+          <div class="titulo">
+            <h2>Java</h2>
+          </div>
+          <div class="descripcion">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut recusandae eaque debitis sint necessitatibus, officia ex.</p>
+          </div>
+
+          <a class="more" href="#">ver más</a>
+
+        </article>
+      </section>
       <footer>
         <div id="redesSociales">
 
@@ -218,8 +366,11 @@
             <li><a href="https://www.instagram.com" target="blank"><i class="fab  fa-instagram"></i></a></li>
 
           </ul>
+          <div id="copy">
+            <h4>&copy; Copyright your Website 2019</h4>
+          </div>
 
-          <small>&copy; Copyright your Website 2019</small>
+          <!-- <small>&copy; Copyright your Website 2019</small> -->
 
 
         </div>
