Ajustes en detalle de productos

--- a/detalle.html
+++ b/detalle.html
@@ -74,10 +74,16 @@
               </video>
             </article>
             <button type="button" name="button">
-                <a href="enlace.html">Comenzar ahora</a>
+                <a href="enlace.html">Agregar al Carrito</a>
             </button>
             <div class="spinner-grow text-primary" role="status">
                 <span class="sr-only">Loading...</span>
+            </div>
+            <div class="precio">
+              <h2>PRECIO</h2>
+              <div class="circulo">
+                <h3>$ 12</h3>
+              </div>
             </div>
    
           </section>
