Ajustes de estilos

--- a/FAQ.html
+++ b/FAQ.html
@@ -34,7 +34,7 @@
           </ul>
             <div class="nav">
                 <nav id="principal">
-                    <img src="img/logo4.png" alt="logo" id="logoChico">
+                    <img src="img/logo5t.png" alt="logo" id="logoChico">
                     <h2>DH - Grupo 5</h2>
                     <ul>
                         <li><a href="home.html">HOME</a></li>
