--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,7 @@
 
             <div class="nav">
                 <nav id="principal">
-                    <img src="img/logo4.png" alt="logo" id="logoChico">
+                    <img src="img/logo5t.png" alt="logo" id="logoChico">
                     <h2>DH - Grupo 5</h2>
     
                     <ul>
