--- a/detalle.html
+++ b/detalle.html
@@ -33,7 +33,7 @@
 
           <div class="nav">
               <nav id="principal">
-                  <img src="img/logo4.png" alt="logo" id="logoChico">
+                  <img src="img/logo5t.png" alt="logo" id="logoChico">
                   <h2>DH - Grupo 5</h2>
 
                   <ul>
@@ -74,7 +74,7 @@
               </video>
             </article>
             <button type="button" name="button">
-                <a href="enlace.html">Agregar al Carrito</a>
+                <a href="carrito.html">Agregar al Carrito</a>
             </button>
             <div class="spinner-grow text-primary" role="status">
                 <span class="sr-only">Loading...</span>
