--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
           </ul>
           <div class="nav">
                 <nav id="principal">
-                    <img src="img/logo4.png" alt="logo" id="logoChico">
+                    <img src="img/logo5t.png" alt="logo" id="logoChico">
                     <h2>DH - Grupo 5</h2>
                     <ul>
                         <li><a href="home.html">HOME</a></li>
@@ -54,8 +54,9 @@
                 </div>
             </div>
             <div class="mainperfil">
-            <h1 class="titulo">Ingreso</h1>
-            <hr class="lineahorizontal">
+                <h1 class="titulo">Ingreso</h1>
+                <hr class="lineahorizontal">
+            </div>
             <form action="Login.html" method="POST">
               <div class="form-group row">
                 <label for="Nombre" class="col-sm-4 col-form-label">Usuario:</label>
