--- a/productos.html
+++ b/productos.html
@@ -16,7 +16,7 @@
       <header>
         <div class="nav">
           <nav id="principal">
-            <img src="img/logo4.png" alt="logo" id="logoChico">
+            <img src="img/logo5t.png" alt="logo" id="logoChico">
             <h2>DH - Grupo 5</h2>
 
             <ul>
