--- a/carrito.html
+++ b/carrito.html
@@ -23,7 +23,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">MENU</a>
           <div class="dropdown-menu">
-            <!-- <a class="dropdown-item" href="home.html">HOME</a> -->
+            <a class="dropdown-item" href="home.html">HOME</a>
             <a class="dropdown-item" href="registro.html">REGISTRO</a>
             <a class="dropdown-item" href="login.html">INGRESO</a>
             <a class="dropdown-item" href="contacto.html">CONTACTO</a>
@@ -51,7 +51,84 @@
       </div>
     </header>
     <main>
-      <div class="encabezado">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item active" aria-current="page"><h2>Carrito de Compras</h2></li>
+              <div id="carrito">
+                <img src="img/carrito.ico" alt="">
+              </div>
+            </ol>
+        </nav>
+
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Producto</th>
+              <th scope="col">Precio</th>
+              <th scope="col">Cantidad</th>
+              <th scope="col">Subtotal</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row"><i class="far fa-trash-alt"></i><img src="img\PHP.jpg" alt="curso" class="img-thumbnail"><h2>PHP y MySQL</h2></th>
+              <td>U$D 12</td>
+              <td>1</td>
+              <td>U$D 12</td>
+            </tr>
+            <tr>
+              <th scope="row"><i class="far fa-trash-alt"></i><img src="img\bootstrap4.jpg" alt="curso" class="img-thumbnail"><h2>BOOTSTRAP4</h2></th>
+              <td>U$D 10</td>
+              <td>1</td>
+              <td>U$D 10</td>
+            </tr>
+            <tr>
+              <th scope="row"></th>
+              <td>TOTAL</td>
+              <td></td>
+              <td>U$D 22</td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="phone">
+          <div class="producto">
+            <img src="img\PHP.jpg" alt="curso" class="img-thumbnail">
+            <h2>PHP y MySQL</h2>
+          </div>
+          <div class="precio">
+            <h2>Precio</h2>
+            <h2>U$S 12</h2>
+          </div>
+          <div class="subtotal">
+              <h2>Subtotal</h2>
+              <h2>U$S 12</h2>
+          </div>
+
+        </div>
+        <div class="phone">
+            <div class="producto">
+              <img src="img\bootstrap4.jpg" alt="curso" class="img-thumbnail">
+              <h2>BOOTSTRAP 4</h2>
+            </div>
+            <div class="precio">
+              <h2>Precio</h2>
+              <h2>U$S 10</h2>
+            </div>
+            <div class="subtotal">
+                <h2>Subtotal</h2>
+                <h2>U$S 10</h2>
+            </div>
+  
+          </div>
+          <div class="total">
+            <h2>TOTAL</h2>
+            <h2>U$S 22</h2>
+          </div>
+
+
+
+
+      <!-- <div class="encabezado">
         <ul>
           <li><h2>PRODUCTO</h2></li>
           <li><h2>PRECIO</h2></li>
@@ -61,7 +138,7 @@
           
         </ul>
         
-      </div>
+      </div> -->
 
 
     </main>
