--- a/registro.html
+++ b/registro.html
@@ -60,13 +60,13 @@
             <hr class="lineahorizontal">
             <form action="registro.html" method="POST">
               <div class="form-group row">
-                <label for="Apellido" class="col-sm-4 col-form-label">Apellido:</label>
+                <label for="apellido" class="col-sm-4 col-form-label">Apellido:</label>
                 <div class="col-sm-8">
                   <input type="apellido" class="form-control" id="apellido" name="apellido">
                 </div>
               </div>     
               <div class="form-group row">
-                <label for="Nombre" class="col-sm-4 col-form-label">Nombre:</label>
+                <label for="nombre" class="col-sm-4 col-form-label">Nombre:</label>
                 <div class="col-sm-8">
                   <input type="nombre" class="form-control" id="nombre" name="nombre">
                 </div>
@@ -80,13 +80,13 @@
               <div class="form-group row">
                 <label for="contrasena1" class="col-sm-4 col-form-label">Contraseña:</label>
                 <div class="col-sm-8">
-                  <input type="password" class="form-control" id="contrasena1" name="contrasena1">
+                  <input type="password" class="form-control" id="password" name="password">
                 </div>
               </div>
               <div class="form-group row">
                 <label for="contrasena2" class="col-sm-4 col-form-label">Repetir Contraseña:</label>
                 <div class="col-sm-8">
-                  <input type="password" class="form-control" id="contrasena" name="contrasena2">
+                  <input type="password" class="form-control" id="password" name="contrasena2">
                 </div>
               </div>
               <button type="submit" class="btn btn-warning mb-2 boton-submit">Registrar</button>
