Se corrigió detalle de producto segun lo solicitado por Caro

--- a/detalle.html
+++ b/detalle.html
@@ -73,9 +73,9 @@
                 <source src=videos\video1.mp4 type=video/ogg>
               </video>
             </article>
-            <button type="button" name="button">
+            <div class="enlace">
                 <a href="carrito.html">Agregar al Carrito</a>
-            </button>
+            </div>
             
             <div class="precio">
               <h2>PRECIO</h2>
